--- a/task-1.html
+++ b/task-1.html
@@ -15,30 +15,30 @@
         <h2>Animals</h2>
 
         <ul>
-          <li>Cat</li>
-          <li>Hamster</li>
-          <li>Horse</li>
-          <li>Parrot</li>
+          <li class=categories-item">Cat</li>
+          <li class=categories-item">Hamster</li>
+          <li class=categories-item">Horse</li>
+          <li class=categories-item">Parrot</li>
         </ul>
       </li>
       <li class="item">
         <h2>Products</h2>
 
         <ul>
-          <li>Bread</li>
-          <li>Prasley</li>
-          <li>Cheese</li>
+          <li class="categories-item">Bread</li>
+          <li class="categories-item">Prasley</li>
+          <li class="categories-item">Cheese</li>
         </ul>
       </li>
       <li class="item">
         <h2>Technologies</h2>
 
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
+         <ul>
+          <li class="techcategories-item">HTML</li>
+          <li class="techcategories-item">CSS</li>
+          <li class="techcategories-item">JavaScript</li>
+          <li class="techcategories-item">React</li>
+          <li class="techcategories-item">Node.js</li>
         </ul>
       </li>
     </ul>
